--- a/index.html
+++ b/index.html
@@ -11,22 +11,28 @@
 <body>
   <header>
     <nav>
-      <div>
-        
+      <div class="cluster1">
+        <button class="hamburger">
+          <span></span><span></span><span></span>
+        </button>
+        <div class="imgContainer">
+          <img src="img/YouTube-White-Full-Color-Logo.wine.svg" alt="">
+        </div>
       </div>
-      <div>
-        <img src="" alt="">
-      </div>
-      <div>
-        <input type="text" name="" id="">
-        <button>
-          <img src="" alt="">
+
+      <div class="cluster2"> 
+        <div class="searchCluster">
+          <input class="search" type="text" name="" id="">
+          <img class="deleteIcon" src="img/delete.svg" alt="">
+        </div>
+        <button class="searchButton">
+          <img src="img/search.svg" alt="">
         </button>
         <div>
           <img src="" alt="">
         </div>
       </div>
-      <div>
+      <div cluster="cluster3">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
