updates to video description

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             </button>
             <p>SIGN IN</p>
           </div>
-
         </div>
       </nav>
     </header>
@@ -79,26 +78,69 @@
             </div>
             <div class="header2">
               <div class="likeDislike">
-                <div>
+                <span>
                   <button>
                     <img src="img/thumb-up.svg" alt="">
                   </button>
                   <p>99m</p>
-                </div>
-                <div>
+                </span>
+                <span>
                   <button>
                     <img src="img/thumb-down.svg" alt="">
                   </button>
                   <p>0</p>
-                </div>
+                </span>
               </div>
+              <div class="header2Buttons">
+                <span>
+                  <button>
+                    <img src="img/share.svg" alt="">
+                  </button>
+                  <p>SHARE</p>
+                </span>
+                <span>
+                  <button>
+                    <img src="img/scissors.png" alt="">
+                  </button>
+                  <p>CLIP</p>
+                </span>
+                <span>
+                  <button>
+                    <img src="img/playlist-plus.svg" alt="">
+                  </button>
+                  <p>SAVE</p>
+                </span>
+                <span>
+                  <button>
+                    <img src="img/dots-horizontal.svg" alt="">
+                  </button>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="videoDescription">
+            <span>
+              <button class="channelIcon">
+                <img  src="img/squarenix.jpg" alt="">
+              </button>
+            </span>
+            <div>
+              <span class="videoTitle">
+                <h6>FINAL FANTASY XIV</h6>
+                <p>1m subcribers</p>
+              </span>
+              <div>
+                <p>Test</p>
+              </div>
+            </div>
+            <div class="cards">
+              <span>
+
+              </span>
               <span>
 
               </span>
             </div>
-          </div>
-          <div class="videoDescription">
-
           </div>
         </div>
         <div>
