updates to vid desc

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
 
-  <title>Youtube</title>
+  <title>FINAL FANTASY XIV TRAILER</title>
 </head>
 <body>
   <div class="content">
@@ -79,13 +79,13 @@
             <div class="header2">
               <div class="likeDislike">
                 <span>
-                  <button>
+                  <button class="mainButton">
                     <img src="img/thumb-up.svg" alt="">
                   </button>
                   <p>99m</p>
                 </span>
                 <span>
-                  <button>
+                  <button class="mainButton">
                     <img src="img/thumb-down.svg" alt="">
                   </button>
                   <p>0</p>
@@ -93,25 +93,25 @@
               </div>
               <div class="header2Buttons">
                 <span>
-                  <button>
+                  <button class="mainButton">
                     <img src="img/share.svg" alt="">
-                  </button>
+                  </button class="mainButton">
                   <p>SHARE</p>
                 </span>
                 <span>
-                  <button>
+                  <button class="mainButton">
                     <img src="img/scissors.png" alt="">
-                  </button>
+                  </button class="mainButton">
                   <p>CLIP</p>
                 </span>
                 <span>
-                  <button>
+                  <button class="mainButton">
                     <img src="img/playlist-plus.svg" alt="">
                   </button>
                   <p>SAVE</p>
                 </span>
                 <span>
-                  <button>
+                  <button class="mainButton">
                     <img src="img/dots-horizontal.svg" alt="">
                   </button>
                 </span>
@@ -124,27 +124,51 @@
                 <img  src="img/squarenix.jpg" alt="">
               </button>
             </span>
-            <div>
-              <span class="videoTitle">
-                <h6>FINAL FANTASY XIV</h6>
-                <p>1m subcribers</p>
-              </span>
-              <div>
-                <p>Test</p>
+            <div class='descriptionContainer'>
+              <div class="containerTop">
+                <span class="videoTitle">
+                  <h6>FINAL FANTASY XIV</h6>
+                  <p>1m subcribers</p>
+                </span>
+                <div class="videoTitleButtons">
+                  <button class="joinButton mainButton">JOIN</button>
+                  <button class="subscribeButton">SUBSCRIBE</button>
+                  <button class="bellIcon mainButton">
+                    <img src="img/bell.png" alt="">
+                  </button>
+                </div>
               </div>
-            </div>
-            <div class="cards">
-              <span>
+              <div class='containerBottom'>
+                <p>Test</p>
+                <div class="cardsContainer">
+                  <div class="card">
+                    <img src="img/ff14banner.jpg" alt="">
+                    <div>
+                      <p>Final Fantasy XIV: Endwalker</p>
+                      <p>2021</p>
+                      <span>
+                        <h4>BROWSE GAME</h4>
+                        <img class="chevron" src="img/chevronRight.png" alt="">
+                      </span>
+                    </div>
 
-              </span>
-              <span>
-
-              </span>
+                  </div>
+                  <div class="card">
+                    <img class="gamingIcon" src="img/gameCategory.jpg" alt="">
+                    <div>
+                      <p>Gaming</p>
+                      <span>                      
+                        <h4>BROWSE ALL GAMING</h4>
+                        <img class="chevron" src="img/chevronRight.png" alt="">
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div>
-
         </div>
       </section>
   </div>
