--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           allowfullscreen>
           </iframe>
         </div>
-        <div class="infoContainer">
+        <section class="infoContainer">
           <div class="videoHeader">
             <div class="header1">
               <h4>FINAL FANTASY XIV: ENDWALKER Full Trailer</h4>
@@ -151,7 +151,6 @@
                         <img class="chevron" src="img/chevronRight.png" alt="">
                       </span>
                     </div>
-
                   </div>
                   <div class="card">
                     <img class="gamingIcon" src="img/gameCategory.jpg" alt="">
@@ -167,9 +166,20 @@
               </div>
             </div>
           </div>
-        </div>
-        <div>
-        </div>
+        </section>
+        <section class="listVideosContainer">
+          <div class="filterVideos">
+            <button class="pill">All</li>
+            <button class="pill">From your search</li>
+            <button class="pill">Final Fantasy XIV: Endwalker</li>
+            <button class="pill">Role-Playing Games</li>
+            <li class="pill">Related</li>
+            <li class="pill">From FINAL FANTASY XIV</li>
+          </div>
+          <div class="listVideos">
+
+          </div>
+        </seciton>
       </section>
   </div>
 </body>
