updates to  videoList

--- a/index.html
+++ b/index.html
@@ -173,13 +173,130 @@
             <button class="pill">From your search</li>
             <button class="pill">Final Fantasy XIV: Endwalker</li>
             <button class="pill">Role-Playing Games</li>
-            <li class="pill">Related</li>
-            <li class="pill">From FINAL FANTASY XIV</li>
+            <button class="pill">Related</button>
+            <button class="pill">From FINAL FANTASY XIV</button>
           </div>
           <div class="listVideos">
-
-          </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (9).webp" alt="">
+              </span>
+              <span>
+                <h4>The Wierd History of JavaScript</h4>
+                <p>Fireship</p>
+                <p>764K views • 2 years ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (8).webp" alt="">
+              </span>
+              <span>
+                <h4>Hate Windows 11? Try this.</h4>
+                <p>Linus Tech Tips</p>
+                <p>1.2M views • 3 days ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (7).webp" alt="">
+              </span>
+              <span>
+                <h4>Reverze 2021 | D-Sturb </h4>
+                <p>Bass Events</p>
+                <p>200K views • 4 weeks ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (6).webp" alt="">
+              </span>
+              <span>
+                <h4>A Day in My Life: MY PARENTS Come to Our Joint-Family Home in India 🇮🇳 #RockFamily </h4>
+                <p>Karl Rock</p>
+                <p>2M views • 1 year ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (1).webp" alt="">
+              </span>
+              <span>
+                <h4>Mechanical Keyboard Group Buy News 11/14/21</h4>
+                <p>MechMerlin</p>
+                <p>1.2K views • 4 hours ago</p>
+              </span>
+            </div>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (2).webp" alt="">
+              </span>
+              <span>
+                <h4>ORIGINAL FFXIV! Asmongold reacts to 1.0 Final Minutes</h4>
+                <p>Asmongold TV</p>
+                <p>480K views • 4 months ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (3).webp" alt="">
+              </span>
+              <span>
+                <h4>Building my Evo 9 MR</h4>
+                <p>Gears and Gasoline</p>
+                <p>521K views • 1 year ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (4).webp" alt="">
+              </span>
+              <span>
+                <h4>Rich Campbell Finishes Shadowbringers 5.0</h4>
+                <p>Based and Lalapilled</p>
+                <p>102K views • 1 month ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault (5).webp" alt="">
+              </span>
+              <span>
+                <h4>Final Fantasy XIV - Lofi Music Best of Mix</h4>
+                <p>DragonstarDT</p>
+                <p>352K views • 1 months ago</p>
+              </span>
+            </div>
+            <div class="listItem">
+              <span>
+                <img src="img/hqdefault.webp" alt="">
+              </span>
+              <span>
+                <h4>ORIGINAL FFXIV! Asmongold reacts to 1.0 Final Minutes</h4>
+                <p>Asmongold TV</p>
+                <p>480K views • 4 months ago</p>
+              </span>
+            </div>
         </seciton>
+        <button class="showMoreButton">SHOW MORE</button>
+        <div class="commentContainer">
+          <div>
+            <p></p>
+            <button>SORT BY</button>
+          </div>
+          <div class="commentList">
+            <div class="commentItem">
+              <span>
+                <img src="" alt="">
+              </span>
+              <span>
+                <h5></h5>
+                <p></p>
+              </span>
+            </div>
+          </div>
+        </div>
       </section>
   </div>
 </body>
