updates to responsive page

--- a/index.html
+++ b/index.html
@@ -71,50 +71,52 @@
           <div class="videoHeader">
             <div class="header1">
               <h4>FINAL FANTASY XIV: ENDWALKER Full Trailer</h4>
-              <span>
+            </div>
+            <div class="header2">
+              <span class="videoHeaderInfo">
                 <p>3,455,199 views • </p>
                 <p>15 May 2021</p>
               </span> 
-            </div>
-            <div class="header2">
-              <div class="likeDislike">
-                <span>
-                  <button class="mainButton">
-                    <img src="img/thumb-up.svg" alt="">
-                  </button>
-                  <p>99m</p>
-                </span>
-                <span>
-                  <button class="mainButton">
-                    <img src="img/thumb-down.svg" alt="">
-                  </button>
-                  <p>0</p>
-                </span>
-              </div>
-              <div class="header2Buttons">
-                <span>
-                  <button class="mainButton">
-                    <img src="img/share.svg" alt="">
-                  </button class="mainButton">
-                  <p>SHARE</p>
-                </span>
-                <span>
-                  <button class="mainButton">
-                    <img src="img/scissors.png" alt="">
-                  </button class="mainButton">
-                  <p>CLIP</p>
-                </span>
-                <span>
-                  <button class="mainButton">
-                    <img src="img/playlist-plus.svg" alt="">
-                  </button>
-                  <p>SAVE</p>
-                </span>
-                <span>
-                  <button class="mainButton">
-                    <img src="img/dots-horizontal.svg" alt="">
-                  </button>
-                </span>
+              <div class="buttonContainer">
+                <div class="likeDislike">
+                  <span>
+                    <button class="mainButton">
+                      <img src="img/thumb-up.svg" alt="">
+                    </button>
+                    <p>99m</p>
+                  </span>
+                  <span>
+                    <button class="mainButton">
+                      <img src="img/thumb-down.svg" alt="">
+                    </button>
+                    <p>0</p>
+                  </span>
+                </div>
+                <div class="header2Buttons">
+                  <span>
+                    <button class="mainButton">
+                      <img src="img/share.svg" alt="">
+                    </button class="mainButton">
+                    <p>SHARE</p>
+                  </span>
+                  <span>
+                    <button class="mainButton">
+                      <img src="img/scissors.png" alt="">
+                    </button class="mainButton">
+                    <p>CLIP</p>
+                  </span>
+                  <span>
+                    <button class="mainButton">
+                      <img src="img/playlist-plus.svg" alt="">
+                    </button>
+                    <p>SAVE</p>
+                  </span>
+                  <span>
+                    <button class="mainButton">
+                      <img src="img/dots-horizontal.svg" alt="">
+                    </button>
+                  </span>
+                </div>
               </div>
             </div>
           </div>
@@ -181,7 +183,7 @@
               <span>
                 <img src="img/hqdefault (9).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>The Wierd History of JavaScript</h4>
                 <p>Fireship</p>
                 <p>764K views • 2 years ago</p>
@@ -191,7 +193,7 @@
               <span>
                 <img src="img/hqdefault (8).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>Hate Windows 11? Try this.</h4>
                 <p>Linus Tech Tips</p>
                 <p>1.2M views • 3 days ago</p>
@@ -201,7 +203,7 @@
               <span>
                 <img src="img/hqdefault (7).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>Reverze 2021 | D-Sturb </h4>
                 <p>Bass Events</p>
                 <p>200K views • 4 weeks ago</p>
@@ -211,7 +213,7 @@
               <span>
                 <img src="img/hqdefault (6).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>A Day in My Life: MY PARENTS Come to Our Joint-Family Home in India 🇮🇳 #RockFamily </h4>
                 <p>Karl Rock</p>
                 <p>2M views • 1 year ago</p>
@@ -221,7 +223,7 @@
               <span>
                 <img src="img/hqdefault (1).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>Mechanical Keyboard Group Buy News 11/14/21</h4>
                 <p>MechMerlin</p>
                 <p>1.2K views • 4 hours ago</p>
@@ -232,7 +234,7 @@
               <span>
                 <img src="img/hqdefault (2).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>ORIGINAL FFXIV! Asmongold reacts to 1.0 Final Minutes</h4>
                 <p>Asmongold TV</p>
                 <p>480K views • 4 months ago</p>
@@ -242,7 +244,7 @@
               <span>
                 <img src="img/hqdefault (3).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>Building my Evo 9 MR</h4>
                 <p>Gears and Gasoline</p>
                 <p>521K views • 1 year ago</p>
@@ -252,7 +254,7 @@
               <span>
                 <img src="img/hqdefault (4).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>Rich Campbell Finishes Shadowbringers 5.0</h4>
                 <p>Based and Lalapilled</p>
                 <p>102K views • 1 month ago</p>
@@ -262,7 +264,7 @@
               <span>
                 <img src="img/hqdefault (5).webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>Final Fantasy XIV - Lofi Music Best of Mix</h4>
                 <p>DragonstarDT</p>
                 <p>352K views • 1 months ago</p>
@@ -272,7 +274,7 @@
               <span>
                 <img src="img/hqdefault.webp" alt="">
               </span>
-              <span>
+              <span class='spanText'>
                 <h4>ORIGINAL FFXIV! Asmongold reacts to 1.0 Final Minutes</h4>
                 <p>Asmongold TV</p>
                 <p>480K views • 4 months ago</p>
@@ -281,12 +283,15 @@
         </seciton>
         <button class="showMoreButton">SHOW MORE</button>
         <div class="commentContainer">
-          <div>
+          <!-- <div>
             <p></p>
             <button>SORT BY</button>
-          </div>
+          </div> -->
           <div class="commentList">
-            <div class="commentItem">
+            <div class="disabledComments">
+              <p>Comments are turned off. <a href="">Learn more</a></p>
+            </div>
+            <!-- <div class="commentItem">
               <span>
                 <img src="" alt="">
               </span>
@@ -294,7 +299,7 @@
                 <h5></h5>
                 <p></p>
               </span>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
